tests/errors/invalid_predicate.stderr
error: proc macro panicked
 --> tests/errors/invalid_predicate.rs:4:5
  |
4 |     set! { x : x <- [1, 2, 3], x + 1 };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: invalid predicate, predicates should evaluate to a `bool`
